--- a/DND/Views/Spell/Index.cshtml
+++ b/DND/Views/Spell/Index.cshtml
@@ -1,75 +1,44 @@
-﻿@model IEnumerable<DND.Domain.Entities.Spell>
+﻿@model DND.Models.FindSpell
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Spells";
+
+}
+@{var levels = new SelectList(new[] { "All", "Cantrip","1", "2", "3", "4", "5", "6", "7", "8", "9" }); }
+
+@using (Ajax.BeginForm("FindSpells", "Spell", new AjaxOptions { UpdateTargetId = "SpellListPartial" }))
+{ 
+    
+    
+    @Html.DropDownListFor(m => m.ClassId, (SelectList)ViewBag.classes)
+
+    @Html.DropDownListFor(m => m.Level, levels)
+
+    @Html.EditorFor(m => m.SpellName)
+    
+    <input type="submit" value="Find Spells" class="btn btn-default" id="submitButton"/>
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Level)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CastingTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Range)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Components)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Duration)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Source)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Level)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CastingTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Range)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Components)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Duration)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Source)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div id="SpellListPartial">
 
-</table>
+    </div>
+<div id="SpellListPartialLoading">
+
+</div>
+<script>
+    $(function () {
+        $.ajax({
+            url: '/Spell/FindSpells',
+            contentType: 'application/html; charset=utf-8',
+            type: 'POST',
+            datetype: 'html'
+        }).success(function (result) {
+            $('#SpellListPartialLoading').hide();
+            $('#SpellListPartial').html(result);
+        });
+    });
+</script>
+
+
