DB spell component changes

--- a/DND/Views/Spell/SpellListPartial.cshtml
+++ b/DND/Views/Spell/SpellListPartial.cshtml
@@ -40,10 +40,34 @@
                         @Html.DisplayFor(modelItem => item.Range)
                     </div>
                     <div class="col-md-3">
-                        @Html.DisplayNameFor(model => model.Components)
+                        @Html.DisplayNameFor(model => model.Ritual)
                     </div>
                     <div class="col-md-9">
-                        @Html.DisplayFor(modelItem => item.Components)
+                        @Html.DisplayFor(modelItem => item.Ritual)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DisplayNameFor(model => model.Somatic)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.DisplayFor(modelItem => item.Somatic)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DisplayNameFor(model => model.Verbal)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.DisplayFor(modelItem => item.Verbal)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DisplayNameFor(model => model.Material)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.DisplayFor(modelItem => item.Material)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DisplayNameFor(model => model.MaterialDescription)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.DisplayFor(modelItem => item.MaterialDescription)
                     </div>
                     <div class="col-md-3">
                         @Html.DisplayNameFor(model => model.Duration)
